<resources>
    <string name="app_name">QuizMillionaire</string>
    <string name="start_game">Начать игру</string>
    <string name="player_email">Электронная почта</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="player_password">Пароль</string>
    <string name="cancel">Отмена</string>
    <string name="background_stars">background stars</string>
    <string name="helper_fifty_percent">helper fifty percent</string>
    <string name="folks_helper">folks helper</string>
    <string name="phone_helper">phone helper</string>
    <string name="image_of_a_question">Image of a question</string>
    <string name="banner_ad_unit_id">ca-app-pub-5139885490573305/2671754043</string>
    <string name="add_question_asset">add_question_asset</string>
    <string name="dislike_question_asset">dislike_question_asset</string>
    <string name="like_question_asset">like_question_asset</string>
    <string name="try_again">Играть снова</string>
    <string name="progress_star">progress_star</string>
    <string name="correct_answers_text_view">%1$d/%2$d</string>
    <string name="finish_game_results_text_view">Поздравляем! Вы набрали %1$d из %2$d баллов.</string>
    <string name="back_button">back button</string>
    <string name="leader_board">Таблица лидеров</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="adding_question">Добавление вопроса</string>
    <string name="press_to_load_image">Нажмите для загрузки фотографии вопроса...</string>
    <string name="add_question_text">Текст вопроса</string>
    <string name="first_answer">Первый ответ</string>
    <string name="second_answer">Второй ответ</string>
    <string name="third_answer">Третий ответ</string>
    <string name="fourth_answer">Четвертый ответ</string>
    <string name="clear_form">Очистить</string>
    <string name="add_question">Добавить</string>
    <string name="loading_message">Загрузка...</string>
    <string name="login_form">Форма входа</string>
</resources>
