<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/sky_logo"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/icon"
        android:contentDescription="@string/background_stars"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/millionaire_logo" />

    <Button
        android:id="@+id/sign_in"
        android:text="@string/sign_in"
        style="@style/MainMenuButton"
        />

    <Button
        android:id="@+id/sign_up"
        android:text="@string/sign_up"
        style="@style/MainMenuButton"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:visibility="gone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/whiteColor"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/whiteColor"
            android:singleLine="true"
            android:hint="@string/player_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="300dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/whiteColor"
            android:singleLine="true"
            android:textColor="@color/whiteColor"
            android:inputType="textPassword"
            android:hint="@string/player_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/start_game"
        android:text="@string/start_game"
        style="@style/MainMenuButton"
        />

    <Button
        android:id="@+id/cancel"
        android:visibility="gone"
        android:text="@string/cancel"
        style="@style/MainMenuButton"
        />


</LinearLayout>