<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_600_1200"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/background_stars"
            android:src="@drawable/millionaire_logo_ru" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteColor"
                android:hint="@string/player_email"
                android:inputType="textWebEmailAddress"
                android:singleLine="true"
                android:textColor="@color/whiteColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteColor"
                android:hint="@string/player_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/whiteColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/register_check_box"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/whiteColor"
            android:fontFamily="@font/lobster_regular"
            android:text="@string/create_account"
            android:textColor="@color/whiteColor" />

        <Button
            android:id="@+id/start_game"
            style="@style/MainMenuButton"
            android:fontFamily="@font/lobster_regular"
            android:text="@string/start_game" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>

</LinearLayout>