<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_600_1200"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/finish_game_toolbar"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/add_question_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/add_question_asset"
                android:src="@drawable/ic_add_circle_outline_white_36dp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/lobster_regular"
            android:textColor="@color/whiteColor"
            android:textSize="28sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/first_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/progress_star"
                android:src="@drawable/baseline_grade_white_48dp" />

            <ImageView
                android:id="@+id/second_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/progress_star"
                android:src="@drawable/baseline_grade_white_48dp" />

            <ImageView
                android:id="@+id/third_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/progress_star"
                android:src="@drawable/baseline_grade_white_48dp" />
        </LinearLayout>

        <Button
            android:id="@+id/leaderboard"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/lobster_regular"
            android:text="@string/leader_board"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/try_again"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/lobster_regular"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="30sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.gms.ads.AdView
            android:id="@+id/finish_adView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>

</LinearLayout>