<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_600_1200"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_button_finish_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_backspace_white_36dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/back_button"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:fontFamily="@font/lobster_regular"
                android:text="@string/adding_question"
                android:textSize="28sp"
                android:textColor="@color/whiteColor"
                android:textAlignment="center" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_weight="9">
        <TextView
            android:id="@+id/add_question_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/colorPrimaryDark"
            android:text="Нажмите для загрузки фотографии вопроса..."
            android:fontFamily="@font/lobster_regular"
            android:gravity="center"
            android:textColor="@color/whiteColor"
            android:textSize="30sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteColor"
                android:hint="@string/player_email"
                android:inputType="text"
                android:singleLine="false"
                android:textColor="@color/whiteColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_first_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteColor"
                android:hint="Первый ответ"
                android:inputType="text"
                android:singleLine="false"
                android:textColor="@color/whiteColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_second_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteColor"
                android:hint="Второй ответ"
                android:inputType="text"
                android:singleLine="false"
                android:textColor="@color/whiteColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_third_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteColor"
                android:hint="Третий ответ"
                android:inputType="text"
                android:singleLine="false"
                android:textColor="@color/whiteColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_fourth_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteColor"
                android:hint="Четвертый ответ"
                android:inputType="text"
                android:singleLine="false"
                android:textColor="@color/whiteColor" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>